_k8s/airflow.yaml
# 클러스터에 에어플로우용 네임스페이스 생성
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
---
apiVersion: v1
kind: Service
metadata:
  name: airflow-postgresql
  namespace: airflow
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: airflow-postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-postgresql
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-postgresql
  template:
    metadata:
      labels:
        app: airflow-postgresql
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          emptyDir: {}
---

# 셀러리 브로커용 레디스
apiVersion: v1
kind: Service
metadata:
  name: airflow-redis
  namespace: airflow
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: airflow-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-redis
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-redis
  template:
    metadata:
      labels:
        app: airflow-redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: airflow
spec:
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          emptyDir: {}
---

### airflow component: webserver, scheduler, worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:
      containers:
        - name: webserver
          #image: apache/airflow:2.10.2
          image: labineseo90/airflow:2.10.5-custom
          args: ["webserver"]
          ports:
            - containerPort: 8080
          # dag 저장용 pvc mount
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
              subPath: repo/dags
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.3.0
          volumeMounts:
            - name: dags
              mountPath: /git
      volumes:
        - name: dags
          emptyDir: { }
#      # pvc mount
#      volumes:
#        - name: dags
#          persistentVolumeClaim:
#            claimName: airflow-dags-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:
      containers:
        - name: scheduler
          #image: apache/airflow:2.10.2
          image: labineseo90/airflow:2.10.5-custom
          args: ["scheduler"]
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
              subPath: repo/dags
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.3.0
          volumeMounts:
            - name: dags
              mountPath: /git
      volumes:
        - name: dags
          emptyDir: { }
#      # pvc mount
#      volumes:
#        - name: dags
#          persistentVolumeClaim:
#            claimName: airflow-dags-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-worker
  template:
    metadata:
      labels:
        app: airflow-worker
    spec:
      containers:
        - name: worker
          #image: apache/airflow:2.10.2
          image: labineseo90/airflow:2.10.5-custom
          args: ["celery", "worker"]
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
              subPath: repo/dags
        - name: git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.3.0
          volumeMounts:
            - name: dags
              mountPath: /git
      volumes:
        - name: dags
          emptyDir: { }
#      volumes:
#        - name: dags
#          persistentVolumeClaim:
#            claimName: airflow-dags-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: airflow-webserver
---

# 인그레스 설정
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  namespace: airflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: local-airflow.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
---

# dag 생성용 pvc
---
